force-app/main/default/objects/KimbleOne__InvoiceLineItemTaxItem__c/KimbleOne__InvoiceLineItemTaxItem__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item Tax Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Invoice Line Item Tax Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Item Tax Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>