force-app/main/default/objects/KimbleOne__InvoiceLineItemTaxItem__c/fields/KimbleOne__InvoiceLineItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceLineItem__c</fullName>
    <label>Invoice Line Item</label>
    <referenceTo>KimbleOne__InvoiceLineItem__c</referenceTo>
    <relationshipLabel>Invoice Line Item Tax Items</relationshipLabel>
    <relationshipName>InvoiceLineItemTaxItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>