force-app/main/default/objects/KimbleOne__InvoiceLineItemTaxItem__c/fields/KimbleOne__TaxNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxNarrative__c</fullName>
    <description>Description of tax applied.</description>
    <label>Tax Narrative</label>
    <type>TextArea</type>
</CustomField>